# calculator

./: CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE.md  README.md  calculator.desktop  grammar.cpp  grammar.hpp  main.cpp  token.cpp  token.hpp
.github/workflows/: eng-build.yaml  rel-build.yaml  run-tests.yaml
include/: calculator.hpp  exceptions.hpp  token.hpp
include/core/: calculator.hpp  exceptions.hpp  operations.hpp  token.hpp  tstream.hpp  version.hpp.in
include/iface/: clitstream.hpp  itstream.hpp
include/ui/: calculator_gen_ui.hpp  calculator_ui.hpp
scripts/: gtest_to_html.py
src/: calculator.cpp  grammar.cpp  main.cpp  token.cpp
src/core/: calculator.cpp  exceptions.cpp  operations.cpp  token.cpp  tstream.cpp
src/iface/: clitstream.cpp
src/ui/: calculator.ui  calculator_ui.cpp
tests/: CMakeLists.txt  test_basic_expressions.cpp  test_basic_operation.cpp  test_complex_expressions.cpp  test_error_hamdling.cpp  test_uncommon_expressions.cpp
